@startuml

skinparam defaultFontName monospaced

'=======================================================================================================================
class AppEvent
class EventQueue
class NativeEventListeners

'=======================================================================================================================
abstract class AppEventMgr {
    + pollEvents()
==
    + getNextEvent() : AppEvent
--
    + getEventQueue()
    + getNativeEventListeners()
==
    - {abstract} _fetchNativeEvents()
}

'------------------------------------------------------------------------------------------------------------------------
AppEventMgr *-- EventQueue
AppEventMgr *-- NativeEventListeners

'------------------------------------------------------------------------------------------------------------------------
AppEventMgr --> AppEvent

'=======================================================================================================================
@enduml
